Inmediate Family Images

--- a/Pages/Family.html
+++ b/Pages/Family.html
@@ -29,8 +29,37 @@
             </nav>
             <img id="Family-background" src="../Images/Imagen de fondo Family.jpg" alt="Background">   
             <div id="I-F-Images">
-                <img id="Taitico" src="../Images/Papi.jpg" alt="Taitico">
-                <img id="Mami" src="../Images/Mami.jpg" alt="Mami">
+                <div id="Taitico">
+                <img  src="../Images/Papi.jpg" alt="Taitico">
+                <img src="../Images/Taitico2.jpg" alt="Taitico-overflow">
+                <img src="../Images/Taitico3.jpg" alt="Taitico-overflow">
+                <img src="../Images/Taitico4.jpg" alt="Taitico-overflow">
+                <img src="../Images/Taitico5.jpg" alt="Taitico-overflow">
+                <img src="../Images/Taitico6.jpg" alt="Taitico-overflow">
+                <img src="../Images/Taitico7.jpg" alt="Taitico-overflow">
+                <img src="../Images/Taitico8.jpg" alt="Taitico-overflow">
+                <img src="../Images/Taitico9.jpg" alt="Taitico-overflow">
+                <img src="../Images/Taitico10.jpg" alt="Taitico-overflow">
+                <img src="../Images/Taitico11.jpg" alt="Taitico-overflow">
+                <img src="../Images/Taitico12.jpg" alt="Taitico-overflow">
+                <img src="../Images/Taitico13.jpg" alt="Taitico-overflow">
+                </div>
+                <div id="Mami">
+                <img src="../Images/Mami.jpg" alt="Mami">
+                <img src="" alt="Mom-overflow">
+                <img src="" alt="Mom-overflow">
+                <img src="" alt="Mom-overflow">
+                <img src="" alt="Mom-overflow">
+                <img src="" alt="Mom-overflow">
+                <img src="" alt="Mom-overflow">
+                <img src="" alt="Mom-overflow">
+                <img src="" alt="Mom-overflow">
+                <img src="" alt="Mom-overflow">
+                <img src="" alt="Mom-overflow">
+                <img src="" alt="Mom-overflow">
+                <img src="" alt="Mom-overflow">
+                <img src="" alt="Mom-overflow">
+                </div>
                 <img id="Cami" src="../Images/Cami.jpg" alt="Sister">
                 <img id="Nico" src="../Images/Nico.jpg" alt="Brother">
                 <img id="Tita" src="../Images/Tita.jpg" alt="Second Brother">
